--- a/index.html
+++ b/index.html
@@ -52,40 +52,88 @@
             <div class="movements__type 
             movements__type--deposit">2 deposit</div>
             <div class="movements__date"> 3 days ago</div>
-            <div class="movements__value">4 000€</div>
+            <div class="movements__value">4 000₾</div>
         </div>
         <div class="movements__row">
             <div class="movements__type
             movements__type--withdrawal">1 withdrawal</div>
             <div class="movements__date">3 days ago</div>
-            <div class="movements__value">-378€</div>
+            <div class="movements__value">-378₾</div>
         </div>
 
     </div>
 
       <div class="right">
         <div class="first">
-          <div class="transfer-div">
+        <div class="transfer-div">
           <h2 class="transfer">Transfer money</h2>
         </div>
       <div class="input-div">
+        <div>
           <input
           type="text"
           placeholder=""
           class="transfer-input"
         />
-    
+        <p class="trans-input">Transfer to</p>
+      </div>
+      <div>
         <input
           type="text"
           placeholder=""
           class="transfer-input"
         />
+        <p class="amount-input">Amount</p>
+      </div>
+
+      <button class="btn-input">→</button>
       </div>
 
         </div>
 
-        <div class="second"></div>
-        <div class="third"></div>
+        <div class="second">
+          <p class="request-input">Request loan</p>
+          <div class="req-input">
+            <div class="inp-div">
+            <input
+            type="number"
+            placeholder=""
+            class="transfer-input"
+          />
+          <p class="amount-input">Amount</p>
+        </div>
+        <div class="btn-req-div">
+          <button class="btn-request">→</button>
+        </div>
+        </div>
+        
+        </div>
+
+        <div class="third">
+          <div class="transfer-div">
+            <h2 class="transfer">Close account</h2>
+          </div>
+        <div class="input-div">
+          <div>
+            <input
+            type="text"
+            placeholder=""
+            class="transfer-input"
+          />
+          <p class="trans-input">Confirm user</p>
+        </div>
+        <div>
+          <input
+            type="text"
+            placeholder=""
+            class="transfer-input"
+          />
+          <p class="trans-input">Confirm PIN</p>
+        </div>
+  
+        <button class="btn-input">→</button>
+        </div>
+        </div>
       </div>
 
     </div> 
