--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </form>
     </nav>
 
-    <div class="app">
+    <div class="app active">
       <div class="balance">
         <div>
           <p class="balance__label">Current Balance</p>
@@ -81,9 +81,9 @@
         <input
           type="text"
           placeholder=""
-          class="transfer-input"
+          class="amount-input"
         />
-        <p class="amount-input">Amount</p>
+        <p class="ama-input">Amount</p>
       </div>
 
       <button class="btn-input">→</button>
@@ -92,15 +92,15 @@
         </div>
 
         <div class="second">
-          <p class="request-input">Request loan</p>
+          <p class="request-header">Request loan</p>
           <div class="req-input">
             <div class="inp-div">
             <input
             type="number"
             placeholder=""
-            class="transfer-input"
+            class="request-input"
           />
-          <p class="amount-input">Amount</p>
+          <p class="ama-input">Amount</p>
         </div>
         <div class="btn-req-div">
           <button class="btn-request">→</button>
@@ -118,7 +118,7 @@
             <input
             type="text"
             placeholder=""
-            class="transfer-input"
+            class="close-input"
           />
           <p class="trans-input">Confirm user</p>
         </div>
@@ -126,12 +126,12 @@
           <input
             type="text"
             placeholder=""
-            class="transfer-input"
+            class="close-pin"
           />
           <p class="trans-input">Confirm PIN</p>
         </div>
   
-        <button class="btn-input">→</button>
+        <button class="btn-close">→</button>
         </div>
         </div>
       </div>
@@ -140,11 +140,11 @@
 
     <div class="summary">
       <p class="in">In-</p>
-      <p class="summary__in">27 035,20:</p>
+      <p class="summary__in">0000:</p>
       <p class="out">Out-</p>
-      <p class="summary__out">1082,61:</p>
+      <p class="summary__out">0000:</p>
       <p class="interest">Interest-</p>
-      <p class="summary-interest">323,46:</p>
+      <p class="summary-interest">0000:</p>
       <button class="btn--sort">&downarrow; SORT</button>
     </div>
 
