--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </form>
     </nav>
 
-    <div class="app active">
+    <div class="app">
       <div class="balance">
         <div>
           <p class="balance__label">Current Balance</p>
