--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Bank</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,
+    wght@1,700&family=Open+Sans&family=PT+Sans:ital@1&family=Press+
+    Start+2P&family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="navigation">
