--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
       <p class="summary-interest">0000:</p>
       <button class="btn--sort">&downarrow; SORT</button>
     </div>
+    <div class="timer">
+      <p>You will be logged out after-</p>
+      <p class="time">5:00</p>
+    </div>
 
     </div>
 
