--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
       <p class="summary-interest">0000:</p>
     </div>
     <div class="timer">
-      <p>You will be logged out after-</p>
-      <p class="time">5:00</p>
+      <p>You will be logged out after: </p>
+      <p class="time">2:00</p>
     </div>
 
     </div>
